--- a/DOB AutoRole/DOB AutoRole.csproj
+++ b/DOB AutoRole/DOB AutoRole.csproj
@@ -1,17 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="**\*.cs" />
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
-
   <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="1.0.0-rc-00544" />
+    <PackageReference Include="LiteDB" Version="3.0.0-beta3" />
     <PackageReference Include="Microsoft.NETCore.App" Version="1.0.1" />
   </ItemGroup>
-
 </Project>
