--- a/DOB AutoRole/DOBAR.csproj
+++ b/DOB AutoRole/DOBAR.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <RootNamespace>DOB_AutoRole</RootNamespace>
+    <RootNamespace>DOBAR</RootNamespace>
+    <AssemblyName>DOBAR</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
